# artemis

./: .clang-format  .gitmodules  CMakeLists.txt
cmake/: thrust.cmake
core/: CMakeLists.txt  grid.cpp  grid.hpp  vector.hpp  version.hpp
core/utils/: execution_space_annotations.hpp
examples/: CMakeLists.txt
examples/molecular-dynamics/: CMakeLists.txt  main.cpp
examples/smoothed-particle-hydrodynamics/: CMakeLists.txt  kernel.cpp  kernel.hpp  main.cpp  particle_initializer.hpp
examples/version/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  grid.cpp
